--- a/expose.html
+++ b/expose.html
@@ -27,7 +27,7 @@
       <header>
         <h2>Expose - Party Horn</h2>
       </header>
-      <img src="assets/images/no-image.png" alt="No image selected" />
+      <img src="assets/images/noa-image.png" alt="No image selected" />
       <select name="horn" id="horn-select">
         <option value="select" disabled selected>Select Horn:</option>
         <option value="air-horn">Air Horn</option>
